# fuzzy-suffix-array

./: CMakeLists.txt  fsa  main.cpp  path.cfg
cpp/: Experiment.cpp  Framework.cpp  StaticString.cpp  SuffixArray.cpp  SuffixArrayItem.cpp  SuffixTree.cpp  SuffixTreeNode.cpp  utils.cpp
experiments/: indexing_time_data_set_0_size_type_-1_tau_1_index_type_bfs_alg_FUZZY-SUFFIX-ARRAY.txt  indexing_time_data_set_0_size_type_3_tau_1_index_type_bfs_alg_FUZZY-SUFFIX-ARRAY.txt
header/: C.h  Directives.h  Experiment.h  Framework.h  GlobalVariables.h  StaticString.h  SuffixArray.h  SuffixArrayItem.h  SuffixTree.h  SuffixTreeNode.h  utils.h
